test/classes/errors/borrowedArray.good
borrowedArray.chpl:4: error: 'borrowed' cannot be applied to types other than classes
